deployments/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecostguard
  namespace: kubecostguard
  labels:
    app.kubernetes.io/name: kubecostguard
    app.kubernetes.io/part-of: kubecostguard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubecostguard
