deployments/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecostguard
  namespace: kubecostguard
  labels:
    app.kubernetes.io/name: kubecostguard
    app.kubernetes.io/part-of: kubecostguard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubecostguard.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubecostguard
                port:
                  name: http
